# aylang

./: .clangd  CMakeLists.txt  Makefile
.zed/: debug.json
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: ast.h  expression.h  parser.cpp  parser.h  statement.h
src/token/: token.h
tests/: lexer_test.cpp  parser_test.cpp
